# asteroids

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt
code/asteroids/: CMakeLists.txt  game.cpp  gameLoop.h  level.cpp  level.h  main.cpp  pch.h
data/shaders/: sprite.fs  sprite.vs
data/textures/: asteroid.dds  background.dds  bullet.dds  ship.dds  thrust.dds
docs/: improvements.md
